# flypulator

./: .gitignore  README.md
flypulator/: CMakeLists.txt  package.xml
flypulator/launch/: controller.launch  controller_hexatilt.launch  gazebo.launch  gazebo_hexatilt.launch  gazebo_joystick.launch
flypulator_aerodynamics/: CMakeLists.txt  package.xml
flypulator_aerodynamics/src/: aero_plugin.cc
flypulator_common_msgs/: CMakeLists.txt  package.xml
flypulator_common_msgs/msg/: RotorVelStamped.msg  UavStateStamped.msg  Vector6dMsg.msg
flypulator_control/: CMakeLists.txt  package.xml
flypulator_control/cfg/: control_parameter.cfg  control_parameter.yaml  drone_parameter.yaml  ism_parameter.cfg
flypulator_control/include/flypulator_control/: base_controller.h  controller_interface.h  sliding_mode_controller.h
flypulator_control/src/: controller_interface.cpp  controller_node.cpp  sliding_mode_controller.cpp
flypulator_control_plugin/: CMakeLists.txt  package.xml
flypulator_control_plugin/src/: control_plugin.cc
flypulator_description/: CMakeLists.txt  Hexacopter_igs.rviz  README  model.rviz  package.xml  simulation.rviz
flypulator_description/launch/: display.launch  gazebo.launch  igs.launch  neo11.launch
flypulator_description/meshes/: arm_link_1.STL  arm_link_2.STL  arm_link_3.STL  arm_link_4.STL  arm_link_5.STL  arm_link_6.STL  base_link.STL  blade_Link1.STL  blade_Link2.STL  blade_Link3.STL  blade_Link4.STL  blade_Link5.STL  blade_Link6.STL  blade_link_1.STL  blade_link_2.STL  blade_link_3.STL  blade_link_4.STL  blade_link_5.STL  blade_link_6.STL  dummy_link.STL  foot_link_left.STL  foot_link_right.STL  motor_Link1.STL  motor_Link2.STL  motor_Link3.STL  motor_Link4.STL  motor_Link5.STL  motor_Link6.STL  motor_link_1.STL  motor_link_2.STL  motor_link_3.STL  motor_link_4.STL  motor_link_5.STL  motor_link_6.STL
flypulator_description/param/: aeroparam.yaml  drone_parameter.yaml  joint_names_hexarotor_igs.yaml  jointstatecontroller.yaml  state_estimation_param.yaml
flypulator_description/urdf/: drone.gv  drone.urdf  hexarotor_igs.urdf  multirotor_base.xacro  neo11.xacro  neo11_base.xacro
flypulator_description_new/: CMakeLists.txt  model.config  package.xml
flypulator_description_new/launch/: gazebo.launch  spawn_gazebo.launch  urdf.rviz  view_hexa.launch
flypulator_description_new/meshes/: hexatilt_prop_cw.dae  right_leg.dae
flypulator_description_new/param/: aeroparam.yaml  joint_names_hexarotor_igs.yaml  state_estimation_param.yaml
flypulator_description_new/urdf/: component_snippets.xacro  gazebo_plugins.xacro  hexatilt.gazebo  hexatilt.gv  hexatilt.urdf  hexatilt.xacro  hexatilt_base.xacro  multirotor_base.xacro
flypulator_gazebo_plugin/: CMakeLists.txt  package.xml  plot_data.py  plot_rotorfunction.py  rotor_data.csv  rotor_data_v=-1.csv  rotor_data_v=1.csv
flypulator_gazebo_plugin/include/: motor_model.hpp
flypulator_gazebo_plugin/src/: aero_plugin.cc  aero_plugin.cpp  control_plugin.cpp  fake_sensor_plugin.cpp  propulsion_plugin.cpp  propulsion_plugin_hexa.cpp
flypulator_ism/: CMakeLists.txt  package.xml
flypulator_ism/src/: sliding_mode_controller.cpp
flypulator_plugin/: CMakeLists.txt  package.xml
flypulator_plugin/src/: aero_plugin.cc  control_plugin.cc
flypulator_plugin_aero/: CMakeLists.txt  package.xml
flypulator_plugin_aero/src/: aero_plugin.cc
flypulator_plugin_control/: CMakeLists.txt
flypulator_plugin_control/src/: control_plugin.cc
flypulator_simulation/: CMakeLists.txt  package.xml
flypulator_simulation/flypulator_plugin_control/: package.xml
flypulator_simulation/flypulator_simulation/: package.xml
flypulator_simulation/flypulator_simulation_gazebo/: package.xml
flypulator_simulation_gazebo/: CMakeLists.txt  package.xml
flypulator_simulation_gazebo/launch/: display.launch  gazebo.launch  gazebo_joystick.launch  joy.launch
flypulator_simulation_launch/: CMakeLists.txt  package.xml
flypulator_simulation_launch/launch/: display.launch  gazebo.launch  joy.launch
flypulator_teleoperation/: CMakeLists.txt  package.xml
flypulator_teleoperation/launch/: joy.launch
flypulator_teleoperation/src/: joystick.cpp
flypulator_tracking_control/: CMakeLists.txt  package.xml
flypulator_traj_generator/: CMakeLists.txt  package.xml
flypulator_traj_generator/include/flypulator_traj_generator/: trajectory_generator.h
flypulator_traj_generator/src/: trajectory_generator.cpp  trajectory_generator_server.cpp
flypulator_traj_generator/srv/: linear_trajectory.srv  polynomial_trajectory.srv
sliding_mode_controller/: CMakeLists.txt  package.xml
sliding_mode_controller/src/: sliding_mode_controller.cpp
trajectory_generator/: CMakeLists.txt  package.xml
trajectory_generator/include/trajectory_generator/: trajectory_generator.h
trajectory_generator/src/: trajectory_generator.cpp  trajectory_generator_server.cpp
trajectory_generator/srv/: linear_trajectory.srv
