
<package>
  <name>flypulator_common_msgs</name>
  <version>0.0.1</version>
  <description>The common messages package</description>

  <maintainer email="jinyao383@hotmail.com">Jinyao Zhu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
