<package>
  <name>flypulator_simulation</name>
  <version>0.0.0</version>
  <description>The flypulator gazebo simulation package</description>

  <maintainer email="avalon@todo.todo">avalon</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>flypulator_common_msgs</run_depend>
  <run_depend>flypulator_plugin_aero</run_depend>
  <run_depend>flypulator_plugin_control</run_depend>
  <run_depend>flypulator_teleoperation</run_depend>
  <run_depend>flypulator_description</run_depend>
  
</package>
