<package>
  <name>flypulator_simulation_gazebo</name>
  <version>0.0.0</version>
  <description>The flypulator package</description>

  <maintainer email="avalon@todo.todo">avalon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>flypulator_plugin</run_depend>
  <run_depend>flypulator_teleoperation</run_depend>
  <run_depend>flypulator_description</run_depend>
  
</package>