<package>
  <name>flypulator_tracking_control</name>
  <version>0.0.1</version>
  <description>flypulator contains packages related to modeling, control and simulation of multicopter systems</description>
  <maintainer email="chao.yao@tu-dresden.de">Chao Yao</maintainer>

  <license>BSD</license>

  <author email="chao.yao@tu-dresden.de">Chao Yao</author>
  <author email="jan.krieglstein@gmail.com">Jinyao Zhu</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sliding_mode_controller</run_depend>
  <run_depend>trajectory_generator</run_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
